syntax = "proto3";

package PyModuleProt;

enum Command {
  COMMAND_NOOP = 0;
  COMMAND_START_STREAM = 1;
  COMMAND_STOP_STREAM = 2;
  COMMAND_LOAD_PROFILE = 3;
       [.... was sonst noch so f√ºr commands gebraucht werden...]
}

enum State {
  STATE_IDLE = 0;
  STATE_STREAMING = 1;
  STATE_ERROR = 2;
}

message DataPacket {
  State state = 1;
  string timestamp = 2;
  string mental_command = 3;
     [... was das EEG sonst noch so brauchbares an daten hat...]
}

message SendCommand {
  Command command = 1;
  optional int32 i_value = 2;
  optional string s_value = 3;
}